--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
     <img src="pomodoro.jpg" alt="pomidor">
-
+<html>
+    <head>
+    </head>
+    <body style="background-color: lightblue; color: black;">
+</body>
+</html>
