--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
     <img src="pomodoro.jpg" alt="pomidor">
+<html>
+<body>
+  <img src="obraz.jpg" alt="Opis obrazu" align="middle">
+</body>
+</html>
 
