--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <img src="pomodoro.jpg" alt="pomidor">
 <html>
 <body>
-  <img src="obraz.jpg" alt="Opis obrazu" align="middle">
+  <img src="pomodoro.jpg" alt="pomidor" align="middle">
 </body>
 </html>
 
